.k8s-bootstrap/aks/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  labels:
    app.kubernetes.io/managed-by: vlyv
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: vlyv-production
    namespace: envoy-gateway-system
